<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/tV_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_title"
            android:textColor="@color/purple_700"
            android:textSize="20sp"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_male"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_male"
            app:layout_constraintTop_toBottomOf="@id/tV_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"/>

        <Button
            android:id="@+id/btn_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_female"
            app:layout_constraintTop_toBottomOf="@id/tV_title"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/eT_random_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/textView_inputNum"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_male" />

        <TextView
            android:id="@+id/tV_random_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textView_random"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/btn_male"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/button_check"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_random_check"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_random_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/button_random"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/eT_random_text" />

        <fragment
            android:name="com.example.live_data.LiveDataFragment"
            android:id="@+id/something"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/btn_random_check"
            app:layout_constraintBottom_toTopOf="@id/btn_delete_fragment"/>


        <Button
            android:id="@+id/btn_delete_fragment"
            android:text="@string/hide_or_show"
            android:textSize="20sp"
            android:backgroundTint="@color/purple_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
